Update MainService.java